# rust2prod_axum

./: .envrc  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  flake.nix  logfile  rust2prod.nix
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20221129132353_create_subscription_table.sql
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
