[package]
name = "rust2prod_amir"
version = "0.1.0"
edition = "2021"


authors = ["Amir Alesheikh <amirhossein.alesheikh@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust2prod_amir"

[dependencies]
axum = "0.6.0"
axum-macros = "0.3.0"
config = "0.13.2"
serde = { version = "1.0.148", features = ["derive"] }
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "migrate", "uuid"] }
tokio = { version = "1.22.0", features = ["rt-multi-thread", "tokio-macros", "macros"] }
uuid = { version = "1.2.2", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls" ] }
