[package]
name = "rust2prod"
version = "0.1.0"
edition = "2021"


authors = ["Amir Alesheikh <amirhossein.alesheikh@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust2prod"

[dependencies]
axum = { version = "0.6.0", features = ["http2"] }
config = "0.13.2"
serde = { version = "1.0.148", features = ["derive"] }
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "migrate", "uuid", "offline"] }
tokio = { version = "1.22.0", features = ["rt-multi-thread", "tokio-macros", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.0"
uuid = { version = "1.2.2", features = ["v4"] }
validator = "0.16.0"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json" ] }

[dev-dependencies]
claims = "0.7.1"
fake = "2.5.0"
once_cell = "1.16.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.91"
wiremock = "0.5.16"

[http]
proxy = "socks5://127.0.0.1:1080"

